feat: list all widgets api resources
